# AqKanji2Koe-OpenJTalk

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
crates/aqkanji2koe/: Cargo.toml
crates/aqkanji2koe-capi/: Cargo.toml
crates/aqkanji2koe-capi/src/: lib.rs
crates/aqkanji2koe/src/: converter.rs  error.rs  lib.rs  mora.rs  phoneme.rs
include/: aqkanji2koe.h
scripts/: package-android-bundle.sh  package-capi-bundle.sh  package-ios-bundle.sh
src/: main.rs
